objects/User_Rated_Item__c.object
<CustomObject>
    <description>Created By :- Veeresh Alur
Date: 27-Feb-14
Capability: ES Social Learning Platform
Release: 2
Description: User Rated Item</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rated_Item_Id__c</fullName>
        <label>Rated Item Id</label>
        <referenceTo>Rated_Item__c</referenceTo>
        <relationshipLabel>User Rated Items</relationshipLabel>
        <relationshipName>User_Rated_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating_Nbr__c</fullName>
        <label>Rating Nbr</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Rated_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Rated Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>URI-{00000000}</displayFormat>
        <label>User Rated Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Rated Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>